Fixed a styling issue, where the padding overlapped the header

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -227,7 +227,7 @@ h1 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
@@ -242,7 +242,7 @@ h2 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
@@ -257,7 +257,7 @@ h3 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
@@ -272,7 +272,7 @@ h4 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
